frotend/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: deployment
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
