frotend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: studentapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
